--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
